--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
 <meta charset="utf-8">
 <meta name="description" content="">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="/assets/css/reset.css">
 </head>
 <body>
 <div id="app">
